--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -52,7 +52,7 @@
             android:text="Send Report to apjemmax@irokotech.com"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/textView28"
+            android:id="@+id/txt_user_email"
             android:textColor="@android:color/white"
             android:background="@color/indigo"
             android:gravity="right|center_vertical"
@@ -64,7 +64,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_height="match_parent"
-            android:layout_below="@+id/textView28"
+            android:layout_below="@+id/txt_user_email"
             android:layout_above="@+id/txt_report">
 
             <LinearLayout
@@ -105,7 +105,8 @@
                         android:textStyle="bold"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
+                        android:layout_alignParentStart="true"
+                        android:textSize="14sp" />
                 </RelativeLayout>
 
             </LinearLayout>
@@ -150,7 +151,8 @@
                         android:textStyle="bold"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
+                        android:layout_alignParentStart="true"
+                        android:textSize="14sp" />
                 </RelativeLayout>
 
             </LinearLayout>
@@ -186,7 +188,8 @@
                         android:layout_height="wrap_content"
                         android:text="CSV"
                         android:textColor="@android:color/black"
-                        android:layout_marginLeft="7dp" />
+                        android:layout_marginLeft="7dp"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -211,7 +214,8 @@
                         android:text="PDF"
                         android:textColor="@color/schedule_title_bg_color"
                         android:id="@+id/txt_two_weeks"
-                        android:layout_marginLeft="7dp" />
+                        android:layout_marginLeft="7dp"
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -221,7 +225,7 @@
                 android:id="@+id/textView30"
                 android:text="Report Content"
                 android:textColor="@android:color/black"
-                android:textSize="14sp" />
+                android:textSize="17sp" />
 
             <RelativeLayout
                 android:id="@+id/sales_layout"
@@ -235,9 +239,10 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/circle_uncheck"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottom="false"
                     android:layout_marginRight="5dp"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
 
                 <TextView
                     android:paddingLeft="5dp"
@@ -250,7 +255,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View android:layout_width="match_parent"
@@ -267,7 +272,7 @@
                 <ImageView android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/circle_uncheck"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottom="false"
                     android:layout_marginRight="5dp"
                     android:layout_alignParentRight="true"
                     android:id="@+id/img_visits"/>
@@ -283,7 +288,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View android:layout_width="match_parent"
@@ -300,7 +305,7 @@
                 <ImageView android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/circle_uncheck"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottom="false"
                     android:layout_marginRight="5dp"
                     android:layout_alignParentRight="true"
                     android:id="@+id/img_clients"/>
@@ -316,7 +321,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <View android:layout_width="match_parent"
