Notification, Co-worker

--- a/app/src/main/res/layout/coworker_activity_list_item.xml
+++ b/app/src/main/res/layout/coworker_activity_list_item.xml
@@ -77,7 +77,8 @@
                 android:textColor="@color/accentColor"
                 android:text="Ilume candles"
                 android:textSize="14dp"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:orientation="horizontal"
