--- a/app/src/main/res/layout/activity_add_territory.xml
+++ b/app/src/main/res/layout/activity_add_territory.xml
@@ -107,19 +107,20 @@
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
                   android:background="@android:color/white"
-                  android:layout_height="match_parent">
+                  android:layout_height="match_parent"
+        android:orientation="vertical">
         <TextView android:layout_width="wrap_content"
                   android:gravity="center"
                   android:layout_gravity="center"
-                  android:text="No lines found"
+                  android:text="No territories found"
                   android:layout_margin="30dp"
                   android:background="@drawable/rounded_white_background"
                   android:padding="20dp"
                   android:textSize="15sp"
-                  android:visibility="gone"
-                  android:textColor="@color/light_gray"
+            android:textColor="@color/light_gray"
                   android:id="@+id/no_results"
-                  android:layout_height="wrap_content"/>
+                  android:layout_height="wrap_content"
+            android:visibility="gone" />
         <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
