--- a/app/src/main/res/layout/activity_add_visits.xml
+++ b/app/src/main/res/layout/activity_add_visits.xml
@@ -128,7 +128,8 @@
                     android:layout_height="wrap_content"
                     android:text="Change"
                     android:textColor="@color/gray"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:id="@+id/txt_change"/>
 
             </LinearLayout>
             <LinearLayout style="@style/SeperatorHorizontal" />
