--- a/app/src/main/res/layout/activity_client_schedules.xml
+++ b/app/src/main/res/layout/activity_client_schedules.xml
@@ -44,7 +44,8 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+            android:onClick="onClick">
             <ImageView
                     android:id="@+id/img_edit"
                     style="@style/ActionBarIcon"
