--- a/app/src/main/res/layout/activity_line_add.xml
+++ b/app/src/main/res/layout/activity_line_add.xml
@@ -13,6 +13,7 @@
       >
 
         <TextView
+            android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -40,6 +41,7 @@
 
         </LinearLayout>
     </RelativeLayout>
+
     <LinearLayout android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:background="@android:color/white"
