--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -193,27 +193,26 @@
                         android:text="LOCATION"
                         style="@style/FieldLabels"/>
                     <RelativeLayout
-
                             android:onClick="onClick"
                             android:layout_width="match_parent"
                             android:layout_height="fill_parent">
                     <TextView
-                            android:paddingLeft="5dp"
+                        android:paddingLeft="5dp"
                         android:id="@+id/address_tv"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                            android:background="@android:color/white"
+                        android:background="@android:color/white"
                         android:textColor="@color/grey"
                         android:inputType="text"
                         android:maxLines="1"
                         android:text="Click to add address"/>
                         <ImageView android:layout_width="wrap_content"
-                                   android:layout_height="wrap_content"
-                                   android:src="@drawable/right_arrow"
-                                   android:layout_alignParentBottom="true"
-                                   android:paddingBottom="10dp"
-                                   android:layout_marginRight="5dp"
-                                   android:layout_alignParentRight="true"/>
+                           android:layout_height="wrap_content"
+                           android:src="@drawable/right_arrow"
+                           android:layout_alignParentBottom="true"
+                           android:paddingBottom="10dp"
+                           android:layout_marginRight="5dp"
+                           android:layout_alignParentRight="true"/>
                     </RelativeLayout>
                     <View android:layout_width="match_parent"
                           android:layout_height="0.1dp"
@@ -230,23 +229,46 @@
                 android:id="@+id/territory_layout"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_height="50dp">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="TERRITORY"
-                    android:id="@+id/textView17"
-                    android:gravity="center_vertical"
-                    style="@style/FieldLabels"/>
-
-                <ImageView android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow"
-                    android:layout_alignParentBottom="false"
-                    android:layout_marginRight="5dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingBottom="2dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TERRITORY"
+                        style="@style/FieldLabels"/>
+                    <RelativeLayout
+                        android:onClick="onClick"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:paddingLeft="5dp"
+                            android:id="@+id/territory_tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@android:color/white"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:text="Click to add territory"
+                            android:textStyle="bold" />
+                        <ImageView android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/right_arrow"
+                            android:layout_alignParentBottom="true"
+                            android:paddingBottom="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_alignParentRight="true"/>
+                    </RelativeLayout>
+
+
+                </LinearLayout>
             </RelativeLayout>
 
             <View android:layout_width="match_parent"
