--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -118,17 +118,21 @@
                           android:layout_height="wrap_content"
                           android:layout_below="@+id/password_layout"
                           android:id="@+id/show_password"
+                          android:gravity="center_vertical"
                           android:layout_centerHorizontal="true"
             android:orientation="horizontal">
                 <ImageView android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/show_password_selector"
-                android:src="@drawable/ic_selected_white"/>
+                android:src="@drawable/empty_unchecked_icon"/>
                 <TextView android:layout_width="wrap_content"
-                          android:layout_height="20dp"
+                          android:layout_height="wrap_content"
                           android:textColor="@color/white"
+                          android:padding="10dp"
                           android:gravity="center_vertical"
+
+
 
                 android:text="Show Password"/>
             </LinearLayout>
