--- a/app/src/main/res/layout/dialog_add_client.xml
+++ b/app/src/main/res/layout/dialog_add_client.xml
@@ -12,7 +12,34 @@
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/client_layout">
 
+            <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/com_facebook_profile_picture_blank_portrait"
+                    android:alpha="0.3"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add New Client"
+                    android:textColor="@color/blue"
+                    android:textSize="14sp"
+                    android:layout_centerInParent="true" />
+        </RelativeLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/gray_light"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"></View>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -34,6 +61,34 @@
                 android:textColor="@color/blue"
                 android:textSize="14sp"
                 android:layout_centerInParent="true" />
+        </RelativeLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/gray_light"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"></View>
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/visit_layout">
+
+            <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_users_gray"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add New Visit"
+                    android:textColor="@color/blue"
+                    android:textSize="14sp"
+                    android:layout_centerInParent="true" />
         </RelativeLayout>
 
         <View
@@ -71,33 +126,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"></View>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/client_layout">
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/calendar"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add New Client"
-                android:textColor="@color/blue"
-                android:textSize="14sp"
-                android:layout_centerInParent="true" />
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:background="@color/gray_light"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"></View>
 <!--
         <RelativeLayout
             android:layout_width="match_parent"
