--- a/app/src/main/res/layout/fragment_sign_in_reset.xml
+++ b/app/src/main/res/layout/fragment_sign_in_reset.xml
@@ -12,10 +12,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/str_done"
+            android:text="Reset Password"
             android:id="@+id/txt_done"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true" />
@@ -28,22 +28,13 @@
             android:id="@+id/back_layout">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                style="@style/ActionBarIcon"
                 android:id="@+id/img_close"
                 android:src="@mipmap/btn_back_arrow"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp" />
+                android:layout_marginLeft="0dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/str_back"
-                android:id="@+id/txt_back"
-                android:textSize="20dp"
-                android:textColor="@color/white"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close" />
+
         </LinearLayout>
 
     </RelativeLayout>
@@ -75,6 +66,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="10dp"
             android:ems="10"
+            android:padding="8dp"
             android:hint="@string/str_hint_email"
             android:textColor="@android:color/black"
             android:inputType="textEmailAddress"
@@ -99,26 +91,5 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="54dp"
-        android:background="@color/alert_bg_color"
-        android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/alert_valid_email">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/imageView2"
-            android:src="@mipmap/attention" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_alert"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:layout_marginLeft="25dp" />
-    </LinearLayout>
 </RelativeLayout>
