--- a/app/src/main/res/layout/activity_co_worker_line.xml
+++ b/app/src/main/res/layout/activity_co_worker_line.xml
@@ -58,18 +58,7 @@
 
     </RelativeLayout>
 
-    <TextView android:layout_width="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:text="No territories found"
-        android:layout_margin="30dp"
-        android:background="@drawable/white_fill_grey_stroke"
-        android:padding="20dp"
-        android:textSize="15sp"
-        android:visibility="gone"
-        android:textColor="@color/light_gray"
-        android:id="@+id/no_results"
-        android:layout_height="wrap_content"/>
+
 
     <ListView
         android:layout_width="wrap_content"
@@ -111,4 +100,17 @@
             android:textColor="@color/white"
             android:textSize="14sp" />
     </LinearLayout>
+    <TextView android:layout_width="wrap_content"
+              android:gravity="center"
+              android:layout_gravity="center"
+              android:text="No territories found"
+              android:layout_margin="30dp"
+              android:background="@drawable/white_fill_grey_stroke"
+              android:padding="20dp"
+              android:layout_centerInParent="true"
+              android:textSize="15sp"
+              android:visibility="gone"
+              android:textColor="@color/grey"
+              android:id="@+id/no_results"
+              android:layout_height="wrap_content"/>
 </RelativeLayout>
