--- a/app/src/main/res/layout/dialog_add_client.xml
+++ b/app/src/main/res/layout/dialog_add_client.xml
@@ -106,7 +106,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/sale"
+                android:src="@drawable/sales"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp" />
 
