--- a/app/src/main/res/layout/activity_client_list_layout.xml
+++ b/app/src/main/res/layout/activity_client_list_layout.xml
@@ -27,6 +27,17 @@
 
         </LinearLayout>
 
+        <ImageView
+            style="@style/ActionBarIcon"
+            android:id="@+id/app_icon"
+            android:padding="0dp"
+            android:src="@drawable/logo"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="false"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/back_layout"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/filter"
             android:layout_width="wrap_content"
