--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/map" />
+                android:src="@drawable/maps" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,8 +80,8 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/sale" />
-
+                android:src="@drawable/sales" />
+s
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
