--- a/app/src/main/res/layout/fragment_sale_home.xml
+++ b/app/src/main/res/layout/fragment_sale_home.xml
@@ -15,11 +15,19 @@
                 android:layout_height="54dp">
 
             <ImageView
+                style="@style/ActionBarIcon"
+                android:padding="0dp"
+                android:src="@drawable/logo"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp" />
+
+            <ImageView
                     android:id="@+id/img_printer"
                     android:src="@mipmap/printer"
                     style="@style/ActionBarIcon"
-                    android:layout_marginLeft="10dp"
-                    android:layout_centerVertical="true" />
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true" />
 
             <ImageView
 
@@ -27,8 +35,9 @@
                     android:id="@+id/img_plus"
                     android:src="@mipmap/plus_thin"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="5dp" />
+                    android:layout_alignParentRight="false"
+                    android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/img_printer" />
 
             <ImageView
                     android:layout_width="30dp"
