--- a/app/src/main/res/layout/fragment_schedule_timeline.xml
+++ b/app/src/main/res/layout/fragment_schedule_timeline.xml
@@ -13,7 +13,6 @@
         <ImageView
                 style="@style/ActionBarIcon"
                 android:padding="0dp"
-                android:id="@+id/img_plus"
                 android:src="@drawable/logo"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
@@ -32,6 +31,14 @@
                 android:id="@+id/title"
                 android:textColor="@color/white"
                 android:gravity="center_vertical|center_horizontal" />
+
+        <ImageView
+            style="@style/ActionBarIcon"
+            android:id="@+id/img_plus"
+            android:src="@drawable/plus_thin"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+
     </RelativeLayout>
     <HorizontalScrollView
         android:id="@+id/tab_scroll"
