--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -115,11 +115,11 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/signin"
-            android:src="@drawable/btn_signin"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:background="@drawable/btn_signin" />
 
 
         <LinearLayout android:layout_width="match_parent"
