--- a/app/src/main/res/layout/schedule_dialog.xml
+++ b/app/src/main/res/layout/schedule_dialog.xml
@@ -123,7 +123,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/map" />
+                    android:src="@drawable/maps" />
 
                 <TextView
                     android:layout_width="wrap_content"
