--- a/app/src/main/res/layout/fragment_schedule_view.xml
+++ b/app/src/main/res/layout/fragment_schedule_view.xml
@@ -395,6 +395,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="30dp"
+                android:visibility="gone"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -405,6 +406,7 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:text="Call Client"
                    android:textSize="12sp"
+
                     android:onClick="onClick"
                     android:src="@drawable/phone"
                     android:textColor="@color/white" />
