--- a/app/src/main/res/layout/fragment_sale_home.xml
+++ b/app/src/main/res/layout/fragment_sale_home.xml
@@ -60,6 +60,7 @@
                 android:id="@+id/sub_layout"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="66dp">
 
             <TextView
