--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -17,10 +17,12 @@
                 android:background="@color/drawer_background"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="0dp"
+                android:onClick="onClick"
+
                 android:layout_height="100dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    android:onClick="onClick"
+
                     android:id="@+id/user_picture_iv"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -28,18 +30,20 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:src="@drawable/default_avatar" />
-            <TextView android:layout_width="wrap_content"
+            <TextView android:layout_width="match_parent"
                       android:text=""
                       android:id="@+id/full_name_tv"
                       android:layout_marginTop="30dp"
+                      android:gravity="center"
                       android:layout_centerHorizontal="true"
                       android:textColor="@color/white"
                       android:textSize="20sp"
                       android:layout_alignParentTop="true"
                       android:layout_height="wrap_content"/>
-            <TextView android:layout_width="wrap_content"
+            <TextView android:layout_width="match_parent"
                       android:text=""
                       android:id="@+id/email_tv"
+                      android:gravity="center"
                       android:textColor="@color/white"
                       android:layout_below="@+id/full_name_tv"
                       android:layout_centerHorizontal="true"
@@ -48,6 +52,7 @@
                        android:onClick="onClick"
                        android:id="@+id/settings_menu"
                        android:layout_height="25dip"
+                       android:visibility="gone"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_gear"/>
