--- a/app/src/main/res/layout/activity_co_worker_filter.xml
+++ b/app/src/main/res/layout/activity_co_worker_filter.xml
@@ -165,7 +165,7 @@
 
                     <TextView
                         android:layout_height="35dp"
-                        android:text="Just Me"
+                        android:text="Mine"
                         android:id="@+id/txt_justme"
                         android:textColor="@color/white"
                         android:textSize="14sp"
@@ -177,7 +177,7 @@
 
                     <TextView
                         android:layout_height="35dp"
-                        android:text="Co-Worker"
+                        android:text="Co-Workers'"
                         android:id="@+id/txt_co_worker"
                         android:textColor="@color/black"
                         android:gravity="center_vertical|center_horizontal"
@@ -216,17 +216,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical">
-
+                    <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="35dp"
+                            android:text="ALL"
+                            android:id="@+id/txt_all"
+                            android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:background="@drawable/blue_fill_grey_stroke"
+                            android:layout_marginLeft="15dp"
+                            android:onClick="onLastVisited"/>
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="35dp"
                         android:text="1W"
                         android:id="@+id/txt_1w"
                         android:layout_weight="1"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/blue_fill_grey_stroke"
+                        android:background="@drawable/white_fill_grey_stroke"
                         android:layout_marginLeft="15dp"
                         android:onClick="onLastVisited"/>
 
@@ -259,7 +270,7 @@
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="35dp"
-                        android:text="4W"
+                        android:text=">3W"
                         android:id="@+id/txt_4w"
                         android:layout_weight="1"
                         android:textColor="@color/black"
@@ -276,6 +287,7 @@
                         android:text="> +4W"
                         android:id="@+id/txt_2m"
                         android:layout_weight="1"
+                        android:visibility="gone"
                         android:textColor="@color/black"
                         android:gravity="center_vertical|center_horizontal"
                         android:background="@drawable/white_fill_grey_stroke"
@@ -345,30 +357,31 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_marginTop="10dp">
+                    <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="35dp"
+                            android:text="Lowest"
+                            android:layout_marginLeft="45dp"
+                            android:id="@+id/txt_lowest"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:background="@drawable/blue_fill_grey_stroke"
 
+                            android:onClick="onOrder"/>
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="35dp"
                         android:text="Highest"
                         android:id="@+id/txt_highest"
-                        android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:gravity="center_vertical|center_horizontal"
-                        android:background="@drawable/blue_fill_grey_stroke"
-                        android:layout_marginLeft="45dp"
-                        android:onClick="onOrder"/>
-
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:text="Lowest"
-                        android:id="@+id/txt_lowest"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:gravity="center_vertical|center_horizontal"
                         android:background="@drawable/white_fill_grey_stroke"
                         android:layout_marginLeft="10dp"
                         android:onClick="onOrder"/>
+
+
 
                 </LinearLayout>
             </LinearLayout>
