--- a/app/src/main/res/layout/activity_visits.xml
+++ b/app/src/main/res/layout/activity_visits.xml
@@ -58,7 +58,18 @@
         android:orientation="vertical"
         android:background="@android:color/white"
         android:layout_height="match_parent">
-
+        <TextView android:layout_width="wrap_content"
+                  android:gravity="center"
+                  android:layout_gravity="center"
+                  android:text="You have no notifications"
+                  android:layout_margin="30dp"
+                  android:background="@drawable/white_fill_grey_stroke"
+                  android:padding="20dp"
+                  android:textSize="15sp"
+                  android:visibility="gone"
+                  android:textColor="@color/light_gray"
+                  android:id="@+id/no_results"
+                  android:layout_height="wrap_content"/>
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
