--- a/app/src/main/res/layout/fragment_add_sales.xml
+++ b/app/src/main/res/layout/fragment_add_sales.xml
@@ -25,6 +25,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginTop="0dp"
                 android:text="Add a Sale"
+                android:id="@+id/page_title"
                 android:textColor="@color/white"
                 android:textSize="17dp"
                 android:textStyle="bold" />
