--- a/app/src/main/res/layout/sale_line_list_item.xml
+++ b/app/src/main/res/layout/sale_line_list_item.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:padding="15dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:id="@+id/dollar_icon" />
